Add HTML and CSS for header section

--- a/index.html
+++ b/index.html
@@ -7,5 +7,32 @@
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="reset.css" />
   </head>
-  <body></body>
+  <body>
+    <header>
+      <div class="profile-card">
+        <picture>
+          <source srcset="" media="" />
+          <source srcset="" media="" />
+          <img src="./profile-mobile.jpg" alt="Kresimir Misak" />
+        </picture>
+        <h1>Kresimir Misak</h1>
+      </div>
+      <section class="about-me">
+        <h2>About me</h2>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
+          minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+          aliquip ex ea commodo consequat.
+        </p>
+        <div class="social-links">
+          <a href="#" class="icon">GitHub</a>
+          <a href="#" class="icon">LinkedIn</a>
+          <a href="#" class="icon">Twitter</a>
+        </div>
+      </section>
+    </header>
+  </body>
 </html>
+
+<!-- todo: font -->
