Add HTML and CSS for footer section

--- a/index.html
+++ b/index.html
@@ -13,7 +13,11 @@
         <picture>
           <source srcset="" media="" />
           <source srcset="" media="" />
-          <img src="./profile-mobile.jpg" alt="Kresimir Misak" />
+          <img
+            loading="lazy"
+            src="./images/profile-mobile.jpg"
+            alt="Kresimir Misak"
+          />
         </picture>
         <h1>Kresimir Misak</h1>
       </div>
@@ -32,7 +36,42 @@
         </div>
       </section>
     </header>
+    <footer>
+      <div class="contact-me">
+        <h2>Contact me</h2>
+        <p>
+          Please get in touch if you think our work could be mutually
+          beneficial.
+        </p>
+        <address>
+          <div class="address-top">
+            <p>1234 Elm Road</p>
+            <p>Random Town, California 12345</p>
+          </div>
+          <div class="address-bottom">
+            <p>555-555-5555</p>
+            <a href="mailto:ashley.williams.is.not.real@gmail.com"
+              >ashley.williams.is.not.real@gmail.com</a
+            >
+          </div>
+        </address>
+        <div class="social-links">
+          <a href="#" class="icon">GitHub</a>
+          <a href="#" class="icon">LinkedIn</a>
+          <a href="#" class="icon">Twitter</a>
+        </div>
+      </div>
+      <picture>
+        <source srcset="" media="" />
+        <source srcset="" media="" />
+        <img
+          loading="lazy"
+          src="./images/contact-me-mobile.jpg"
+          alt="Kresimir Misak"
+        />
+      </picture>
+    </footer>
   </body>
 </html>
 
-<!-- todo: font -->
+<!-- todo: latinicna slova, ikone -->
