Add HTML and CSS for main section

--- a/index.html
+++ b/index.html
@@ -36,8 +36,109 @@
         </div>
       </section>
     </header>
+    <main>
+      <h2>My Work</h2>
+      <div class="projects">
+        <div class="project">
+          <img loading="lazy" src="./images/project.jpg" alt="Kresimir Misak" />
+          <div class="project-info">
+            <div class="project-info-top">
+              <h3>Project Name</h3>
+              <div class="project-links">
+                <a href="#">GitHub</a>
+                <a href="#">Demo</a>
+              </div>
+            </div>
+            <p>
+              Short description of the project, just a couple of sentences will
+              do.
+            </p>
+          </div>
+        </div>
+        <div class="project">
+          <img loading="lazy" src="./images/project.jpg" alt="Kresimir Misak" />
+          <div class="project-info">
+            <div class="project-info-top">
+              <h3>Project Name</h3>
+              <div class="project-links">
+                <a href="#">GitHub</a>
+                <a href="#">Demo</a>
+              </div>
+            </div>
+            <p>
+              Short description of the project, just a couple of sentences will
+              do.
+            </p>
+          </div>
+        </div>
+        <div class="project">
+          <img loading="lazy" src="./images/project.jpg" alt="Kresimir Misak" />
+          <div class="project-info">
+            <div class="project-info-top">
+              <h3>Project Name</h3>
+              <div class="project-links">
+                <a href="#">GitHub</a>
+                <a href="#">Demo</a>
+              </div>
+            </div>
+            <p>
+              Short description of the project, just a couple of sentences will
+              do.
+            </p>
+          </div>
+        </div>
+        <div class="project">
+          <img loading="lazy" src="./images/project.jpg" alt="Kresimir Misak" />
+          <div class="project-info">
+            <div class="project-info-top">
+              <h3>Project Name</h3>
+              <div class="project-links">
+                <a href="#">GitHub</a>
+                <a href="#">Demo</a>
+              </div>
+            </div>
+            <p>
+              Short description of the project, just a couple of sentences will
+              do.
+            </p>
+          </div>
+        </div>
+        <div class="project">
+          <img loading="lazy" src="./images/project.jpg" alt="Kresimir Misak" />
+          <div class="project-info">
+            <div class="project-info-top">
+              <h3>Project Name</h3>
+              <div class="project-links">
+                <a href="#">GitHub</a>
+                <a href="#">Demo</a>
+              </div>
+            </div>
+            <p>
+              Short description of the project, just a couple of sentences will
+              do.
+            </p>
+          </div>
+        </div>
+        <div class="project">
+          <img loading="lazy" src="./images/project.jpg" alt="Kresimir Misak" />
+          <div class="project-info">
+            <div class="project-info-top">
+              <h3>Project Name</h3>
+              <div class="project-links">
+                <a href="#">GitHub</a>
+                <a href="#">Demo</a>
+              </div>
+            </div>
+            <p>
+              Short description of the project, just a couple of sentences will
+              do.
+            </p>
+          </div>
+        </div>
+      </div>
+    </main>
     <footer>
-      <div class="contact-me">
+      <section class="contact-me">
         <h2>Contact me</h2>
         <p>
           Please get in touch if you think our work could be mutually
@@ -60,7 +161,7 @@
           <a href="#" class="icon">LinkedIn</a>
           <a href="#" class="icon">Twitter</a>
         </div>
-      </div>
+      </section>
       <picture>
         <source srcset="" media="" />
         <source srcset="" media="" />
@@ -74,4 +175,4 @@
   </body>
 </html>
 
-<!-- todo: latinicna slova, ikone -->
+<!-- todo: latinicna slova, ikone, img alt -->
