--- a/index.html
+++ b/index.html
@@ -30,9 +30,47 @@
           aliquip ex ea commodo consequat.
         </p>
         <div class="social-links">
-          <a href="#" class="icon">GitHub</a>
-          <a href="#" class="icon">LinkedIn</a>
-          <a href="#" class="icon">Twitter</a>
+          <a
+            href="https://en.wikipedia.org/wiki/Kre%C5%A1imir_Mi%C5%A1ak"
+            target="_blank"
+            rel="noopener noreferrer"
+            ><svg
+              class="wikipedia"
+              xmlns="http://www.w3.org/2000/svg"
+              viewBox="0 0 24 24"
+            >
+              <title>wikipedia</title>
+              <path
+                d="M14.97,18.95L12.41,12.92C11.39,14.91 10.27,17 9.31,18.95C9.3,18.96 8.84,18.95 8.84,18.95C7.37,15.5 5.85,12.1 4.37,8.68C4.03,7.84 2.83,6.5 2,6.5C2,6.4 2,6.18 2,6.05H7.06V6.5C6.46,6.5 5.44,6.9 5.7,7.55C6.42,9.09 8.94,15.06 9.63,16.58C10.1,15.64 11.43,13.16 12,12.11C11.55,11.23 10.13,7.93 9.71,7.11C9.39,6.57 8.58,6.5 7.96,6.5C7.96,6.35 7.97,6.25 7.96,6.06L12.42,6.07V6.47C11.81,6.5 11.24,6.71 11.5,7.29C12.1,8.53 12.45,9.42 13,10.57C13.17,10.23 14.07,8.38 14.5,7.41C14.76,6.76 14.37,6.5 13.29,6.5C13.3,6.38 13.3,6.17 13.3,6.07C14.69,6.06 16.78,6.06 17.15,6.05V6.47C16.44,6.5 15.71,6.88 15.33,7.46L13.5,11.3C13.68,11.81 15.46,15.76 15.65,16.2L19.5,7.37C19.2,6.65 18.34,6.5 18,6.5C18,6.37 18,6.2 18,6.05L22,6.08V6.1L22,6.5C21.12,6.5 20.57,7 20.25,7.75C19.45,9.54 17,15.24 15.4,18.95C15.4,18.95 14.97,18.95 14.97,18.95Z"
+              />
+            </svg>
+          </a>
+          <a
+            href="https://www.youtube.com/@kresimirmisakmusic2202"
+            target="_blank"
+            rel="noopener noreferrer"
+            ><svg
+              class="youtube"
+              xmlns="http://www.w3.org/2000/svg"
+              viewBox="0 0 24 24"
+            >
+              <title>youtube</title>
+              <path
+                d="M10,15L15.19,12L10,9V15M21.56,7.17C21.69,7.64 21.78,8.27 21.84,9.07C21.91,9.87 21.94,10.56 21.94,11.16L22,12C22,14.19 21.84,15.8 21.56,16.83C21.31,17.73 20.73,18.31 19.83,18.56C19.36,18.69 18.5,18.78 17.18,18.84C15.88,18.91 14.69,18.94 13.59,18.94L12,19C7.81,19 5.2,18.84 4.17,18.56C3.27,18.31 2.69,17.73 2.44,16.83C2.31,16.36 2.22,15.73 2.16,14.93C2.09,14.13 2.06,13.44 2.06,12.84L2,12C2,9.81 2.16,8.2 2.44,7.17C2.69,6.27 3.27,5.69 4.17,5.44C4.64,5.31 5.5,5.22 6.82,5.16C8.12,5.09 9.31,5.06 10.41,5.06L12,5C16.19,5 18.8,5.16 19.83,5.44C20.73,5.69 21.31,6.27 21.56,7.17Z"
+              />
+            </svg>
+          </a>
+          <a
+            href="https://www.hrt.hr/tag/kresimir-misak"
+            target="_blank"
+            rel="noopener noreferrer"
+            ><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+              <title>television</title>
+              <path
+                d="M21,17H3V5H21M21,3H3A2,2 0 0,0 1,5V17A2,2 0 0,0 3,19H8V21H16V19H21A2,2 0 0,0 23,17V5A2,2 0 0,0 21,3Z"
+              />
+            </svg>
+          </a>
         </div>
       </section>
     </header>
@@ -45,8 +83,14 @@
             <div class="project-info-top">
               <h3>Project Name</h3>
               <div class="project-links">
-                <a href="#">GitHub</a>
-                <a href="#">Demo</a>
+                <a href="#" target="_blank" rel="noopener noreferrer"
+                  ><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                    <title>open-in-new</title>
+                    <path
+                      d="M14,3V5H17.59L7.76,14.83L9.17,16.24L19,6.41V10H21V3M19,19H5V5H12V3H5C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V12H19V19Z"
+                    />
+                  </svg>
+                </a>
               </div>
             </div>
             <p>
@@ -61,8 +105,14 @@
             <div class="project-info-top">
               <h3>Project Name</h3>
               <div class="project-links">
-                <a href="#">GitHub</a>
-                <a href="#">Demo</a>
+                <a href="#" target="_blank" rel="noopener noreferrer"
+                  ><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                    <title>open-in-new</title>
+                    <path
+                      d="M14,3V5H17.59L7.76,14.83L9.17,16.24L19,6.41V10H21V3M19,19H5V5H12V3H5C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V12H19V19Z"
+                    />
+                  </svg>
+                </a>
               </div>
             </div>
             <p>
@@ -77,8 +127,14 @@
             <div class="project-info-top">
               <h3>Project Name</h3>
               <div class="project-links">
-                <a href="#">GitHub</a>
-                <a href="#">Demo</a>
+                <a href="#" target="_blank" rel="noopener noreferrer"
+                  ><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                    <title>open-in-new</title>
+                    <path
+                      d="M14,3V5H17.59L7.76,14.83L9.17,16.24L19,6.41V10H21V3M19,19H5V5H12V3H5C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V12H19V19Z"
+                    />
+                  </svg>
+                </a>
               </div>
             </div>
             <p>
@@ -93,8 +149,14 @@
             <div class="project-info-top">
               <h3>Project Name</h3>
               <div class="project-links">
-                <a href="#">GitHub</a>
-                <a href="#">Demo</a>
+                <a href="#" target="_blank" rel="noopener noreferrer"
+                  ><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                    <title>open-in-new</title>
+                    <path
+                      d="M14,3V5H17.59L7.76,14.83L9.17,16.24L19,6.41V10H21V3M19,19H5V5H12V3H5C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V12H19V19Z"
+                    />
+                  </svg>
+                </a>
               </div>
             </div>
             <p>
@@ -109,8 +171,14 @@
             <div class="project-info-top">
               <h3>Project Name</h3>
               <div class="project-links">
-                <a href="#">GitHub</a>
-                <a href="#">Demo</a>
+                <a href="#" target="_blank" rel="noopener noreferrer"
+                  ><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                    <title>open-in-new</title>
+                    <path
+                      d="M14,3V5H17.59L7.76,14.83L9.17,16.24L19,6.41V10H21V3M19,19H5V5H12V3H5C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V12H19V19Z"
+                    />
+                  </svg>
+                </a>
               </div>
             </div>
             <p>
@@ -125,8 +193,14 @@
             <div class="project-info-top">
               <h3>Project Name</h3>
               <div class="project-links">
-                <a href="#">GitHub</a>
-                <a href="#">Demo</a>
+                <a href="#" target="_blank" rel="noopener noreferrer"
+                  ><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                    <title>open-in-new</title>
+                    <path
+                      d="M14,3V5H17.59L7.76,14.83L9.17,16.24L19,6.41V10H21V3M19,19H5V5H12V3H5C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V12H19V19Z"
+                    />
+                  </svg>
+                </a>
               </div>
             </div>
             <p>
@@ -150,16 +224,62 @@
             <p>Random Town, California 12345</p>
           </div>
           <div class="address-bottom">
-            <p>555-555-5555</p>
-            <a href="mailto:ashley.williams.is.not.real@gmail.com"
-              >ashley.williams.is.not.real@gmail.com</a
-            >
+            <div class="phone">
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                <title>phone-outline</title>
+                <path
+                  d="M20,15.5C18.8,15.5 17.5,15.3 16.4,14.9C16.3,14.9 16.2,14.9 16.1,14.9C15.8,14.9 15.6,15 15.4,15.2L13.2,17.4C10.4,15.9 8,13.6 6.6,10.8L8.8,8.6C9.1,8.3 9.2,7.9 9,7.6C8.7,6.5 8.5,5.2 8.5,4C8.5,3.5 8,3 7.5,3H4C3.5,3 3,3.5 3,4C3,13.4 10.6,21 20,21C20.5,21 21,20.5 21,20V16.5C21,16 20.5,15.5 20,15.5M5,5H6.5C6.6,5.9 6.8,6.8 7,7.6L5.8,8.8C5.4,7.6 5.1,6.3 5,5M19,19C17.7,18.9 16.4,18.6 15.2,18.2L16.4,17C17.2,17.2 18.1,17.4 19,17.4V19Z"
+                />
+              </svg>
+              <a href="tel:555-555-5555">555-555-5555</a>
+            </div>
+            <div class="email">
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                <title>email-outline</title>
+                <path
+                  d="M22 6C22 4.9 21.1 4 20 4H4C2.9 4 2 4.9 2 6V18C2 19.1 2.9 20 4 20H20C21.1 20 22 19.1 22 18V6M20 6L12 11L4 6H20M20 18H4V8L12 13L20 8V18Z"
+                />
+              </svg>
+              <a href="mailto:ashley.williams.is.not.real@gmail.com"
+                >ashley.williams.is.not.real@gmail.com</a
+              >
+            </div>
           </div>
         </address>
         <div class="social-links">
-          <a href="#" class="icon">GitHub</a>
-          <a href="#" class="icon">LinkedIn</a>
-          <a href="#" class="icon">Twitter</a>
+          <a
+            target="_blank"
+            rel="noopener noreferrer"
+            href="https://hr.linkedin.com/in/kre%C5%A1imir-mi%C5%A1ak-492957139"
+            class="icon"
+          >
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              viewBox="0 0 24 24"
+              class="linkedin"
+            >
+              <title>linkedin</title>
+              <path
+                d="M19 3A2 2 0 0 1 21 5V19A2 2 0 0 1 19 21H5A2 2 0 0 1 3 19V5A2 2 0 0 1 5 3H19M18.5 18.5V13.2A3.26 3.26 0 0 0 15.24 9.94C14.39 9.94 13.4 10.46 12.92 11.24V10.13H10.13V18.5H12.92V13.57C12.92 12.8 13.54 12.17 14.31 12.17A1.4 1.4 0 0 1 15.71 13.57V18.5H18.5M6.88 8.56A1.68 1.68 0 0 0 8.56 6.88C8.56 5.95 7.81 5.19 6.88 5.19A1.69 1.69 0 0 0 5.19 6.88C5.19 7.81 5.95 8.56 6.88 8.56M8.27 18.5V10.13H5.5V18.5H8.27Z"
+              />
+            </svg>
+          </a>
+          <a
+            target="_blank"
+            rel="noopener noreferrer"
+            href="https://www.facebook.com/groups/175254696686137/"
+            class="icon"
+            ><svg
+              xmlns="http://www.w3.org/2000/svg"
+              viewBox="0 0 24 24"
+              class="facebook"
+            >
+              <title>facebook</title>
+              <path
+                d="M12 2.04C6.5 2.04 2 6.53 2 12.06C2 17.06 5.66 21.21 10.44 21.96V14.96H7.9V12.06H10.44V9.85C10.44 7.34 11.93 5.96 14.22 5.96C15.31 5.96 16.45 6.15 16.45 6.15V8.62H15.19C13.95 8.62 13.56 9.39 13.56 10.18V12.06H16.34L15.89 14.96H13.56V21.96A10 10 0 0 0 22 12.06C22 6.53 17.5 2.04 12 2.04Z"
+              />
+            </svg>
+          </a>
         </div>
       </section>
       <picture>
@@ -175,4 +295,4 @@
   </body>
 </html>
 
-<!-- todo: latinicna slova, ikone, img alt -->
+<!-- todo: latinicna slova,  img alt -->
