--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Na rubu znanosti | Fan Page</title>
+    <title>Krešimir Mišak | Fan Page</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="reset.css" />
+    <link rel="icon" href="./images/icon.jpeg" />
   </head>
   <body>
     <header>
@@ -16,18 +17,20 @@
           <img
             loading="lazy"
             src="./images/profile-mobile.jpg"
-            alt="Kresimir Misak"
+            alt="Krešimir Mišak"
           />
         </picture>
-        <h1>Kresimir Misak</h1>
+        <h1>Krešimir Mišak</h1>
       </div>
       <section class="about-me">
-        <h2>About me</h2>
+        <h2>O meni</h2>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-          minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-          aliquip ex ea commodo consequat.
+          Krešimir Mišak je novinar i voditelj poznat po svojim dokumentarnim i
+          istraživačkim radovima. Najpoznatiji je kao autor popularne TV emisije
+          "Na rubu znanosti". Osim toga, Mišak je i pisac koji je objavio
+          nekoliko knjiga koje istražuju granice konvencionalnog naučnog
+          razumevanja. Takodje, poznat po svom angažmanu u različitim muzičkim
+          žanrovima.
         </p>
         <div class="social-links">
           <a
@@ -75,37 +78,52 @@
       </section>
     </header>
     <main>
-      <h2>My Work</h2>
+      <h2>Projekti</h2>
       <div class="projects">
         <div class="project">
-          <img loading="lazy" src="./images/project.jpg" alt="Kresimir Misak" />
+          <img
+            loading="lazy"
+            src="./images/project-nrz.jpg"
+            alt="Na rubu znanosti"
+          />
           <div class="project-info">
             <div class="project-info-top">
-              <h3>Project Name</h3>
-              <div class="project-links">
-                <a href="#" target="_blank" rel="noopener noreferrer"
-                  ><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-                    <title>open-in-new</title>
-                    <path
-                      d="M14,3V5H17.59L7.76,14.83L9.17,16.24L19,6.41V10H21V3M19,19H5V5H12V3H5C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V12H19V19Z"
-                    />
-                  </svg>
-                </a>
-              </div>
+              <h3>Na rubu znanosti</h3>
+              <a
+                class="project-links"
+                href="https://sh.wikipedia.org/wiki/Na_rubu_znanosti"
+                target="_blank"
+                rel="noopener noreferrer"
+                ><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                  <title>open-in-new</title>
+                  <path
+                    d="M14,3V5H17.59L7.76,14.83L9.17,16.24L19,6.41V10H21V3M19,19H5V5H12V3H5C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V12H19V19Z"
+                  />
+                </svg>
+              </a>
             </div>
             <p>
-              Short description of the project, just a couple of sentences will
-              do.
+              Televizijska emisija koja istražuje teme iz sfere znanosti,
+              misterija i paranormalnog, često povezujući teorije sa stvarnim
+              događajima. Emisija potiče rasprave o neistraženim i kontroverznim
+              pitanjima.
             </p>
           </div>
         </div>
         <div class="project">
-          <img loading="lazy" src="./images/project.jpg" alt="Kresimir Misak" />
+          <img
+            loading="lazy"
+            src="./images/project-hakuna.jpg"
+            alt="Hakuna Matata"
+          />
           <div class="project-info">
             <div class="project-info-top">
-              <h3>Project Name</h3>
+              <h3>Hakuna Matata</h3>
               <div class="project-links">
-                <a href="#" target="_blank" rel="noopener noreferrer"
+                <a
+                  href="https://hakunamatataband.com/"
+                  target="_blank"
+                  rel="noopener noreferrer"
                   ><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
                     <title>open-in-new</title>
                     <path
@@ -116,96 +134,131 @@
               </div>
             </div>
             <p>
-              Short description of the project, just a couple of sentences will
-              do.
+              HAKUNA MATATA je zagrebački rock-sastav nastao oko 2000. godine.
+              Danas ga čini trojka Krešimir Mišak (gitara, vokal) - Danko
+              Stefanović (bas) - Goran Markić (bubnjevi).
             </p>
           </div>
         </div>
         <div class="project">
-          <img loading="lazy" src="./images/project.jpg" alt="Kresimir Misak" />
+          <img
+            loading="lazy"
+            src="./images/project-doba_virusa.jpg"
+            alt="Doba virusa i ljudi"
+          />
           <div class="project-info">
             <div class="project-info-top">
-              <h3>Project Name</h3>
-              <div class="project-links">
-                <a href="#" target="_blank" rel="noopener noreferrer"
-                  ><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-                    <title>open-in-new</title>
-                    <path
-                      d="M14,3V5H17.59L7.76,14.83L9.17,16.24L19,6.41V10H21V3M19,19H5V5H12V3H5C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V12H19V19Z"
-                    />
-                  </svg>
-                </a>
-              </div>
+              <h3>Doba virusa i ljudi</h3>
+              <a
+                class="project-links"
+                href="https://delfi.rs/knjige/201043-doba-virusa-i-ljudi-knjiga-delfi-knjizare.html"
+                target="_blank"
+                rel="noopener noreferrer"
+                ><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                  <title>open-in-new</title>
+                  <path
+                    d="M14,3V5H17.59L7.76,14.83L9.17,16.24L19,6.41V10H21V3M19,19H5V5H12V3H5C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V12H19V19Z"
+                  />
+                </svg>
+              </a>
             </div>
             <p>
-              Short description of the project, just a couple of sentences will
-              do.
+              Iza nas je vrijeme koje nikog nije ostavilo nepromijenjenim. Ni
+              svijet ni pojedinca. Mnogi su ljudi iz njega izašli i genetski
+              promijenjeni. A sve je to tek scena otvaranja novog čina predstave
+              koja traje znatno duže od tek nekoliko godina ili desetljeća.
             </p>
           </div>
         </div>
         <div class="project">
-          <img loading="lazy" src="./images/project.jpg" alt="Kresimir Misak" />
+          <img
+            loading="lazy"
+            src="./images/project-duhovni_ratnik.jpg"
+            alt="Duhovni ratnik i beskrajni kozmički orgazam"
+          />
           <div class="project-info">
             <div class="project-info-top">
-              <h3>Project Name</h3>
-              <div class="project-links">
-                <a href="#" target="_blank" rel="noopener noreferrer"
-                  ><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-                    <title>open-in-new</title>
-                    <path
-                      d="M14,3V5H17.59L7.76,14.83L9.17,16.24L19,6.41V10H21V3M19,19H5V5H12V3H5C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V12H19V19Z"
-                    />
-                  </svg>
-                </a>
-              </div>
+              <h3>Duhovni ratnik i beskrajni kozmički orgazam</h3>
+              <a
+                class="project-links"
+                href="https://delfi.rs/knjige/193601-duhovni-ratnik-i-beskrajni-kozmicki-orgazam-knjiga-delfi-knjizare.html"
+                target="_blank"
+                rel="noopener noreferrer"
+                ><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                  <title>open-in-new</title>
+                  <path
+                    d="M14,3V5H17.59L7.76,14.83L9.17,16.24L19,6.41V10H21V3M19,19H5V5H12V3H5C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V12H19V19Z"
+                  />
+                </svg>
+              </a>
             </div>
             <p>
-              Short description of the project, just a couple of sentences will
-              do.
+              Autor spremno uskače u duboko more vlastite (pod)svijesti, pritom
+              opremljenu samo iskrenom radoznalošću i željom da se na licu
+              mjesta uvjeri kako živi svijest. Glavni cilj ove knjige je poziv
+              na radikalno preispitivanje svega što znamo o sebi i svijetu u
+              kojem živimo.
             </p>
           </div>
         </div>
         <div class="project">
-          <img loading="lazy" src="./images/project.jpg" alt="Kresimir Misak" />
+          <img
+            loading="lazy"
+            src="./images/project-sretan_vam_kraj.jpg"
+            alt="Sretan vam kraj svijeta... kakvog ste poznavali"
+          />
           <div class="project-info">
             <div class="project-info-top">
-              <h3>Project Name</h3>
-              <div class="project-links">
-                <a href="#" target="_blank" rel="noopener noreferrer"
-                  ><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-                    <title>open-in-new</title>
-                    <path
-                      d="M14,3V5H17.59L7.76,14.83L9.17,16.24L19,6.41V10H21V3M19,19H5V5H12V3H5C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V12H19V19Z"
-                    />
-                  </svg>
-                </a>
-              </div>
+              <h3>Sretan vam kraj svijeta... kakvog ste poznavali</h3>
+
+              <a
+                class="project-links"
+                href="https://delfi.rs/knjige/178053-sretan-vam-kraj-svijeta-kakvog-ste-poznavali-knjiga-delfi-knjizare.html"
+                target="_blank"
+                rel="noopener noreferrer"
+                ><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                  <title>open-in-new</title>
+                  <path
+                    d="M14,3V5H17.59L7.76,14.83L9.17,16.24L19,6.41V10H21V3M19,19H5V5H12V3H5C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V12H19V19Z"
+                  />
+                </svg>
+              </a>
             </div>
             <p>
-              Short description of the project, just a couple of sentences will
-              do.
+              Knjiga intervjua Krešimira Mišaka redak je novinarski poduhvat čak
+              i u svetskim okvirima, jer Mišak je na jednom mestu okupio
+              četrdesetak najpoznatijih svetskih autora iz područja popularne
+              nauke i duhovnosti.
             </p>
           </div>
         </div>
         <div class="project">
-          <img loading="lazy" src="./images/project.jpg" alt="Kresimir Misak" />
+          <img
+            loading="lazy"
+            src="./images/project-smrt_transhumanizmu.jpg"
+            alt="Smrt transhumanizmu, sloboda narodu!"
+          />
           <div class="project-info">
             <div class="project-info-top">
-              <h3>Project Name</h3>
-              <div class="project-links">
-                <a href="#" target="_blank" rel="noopener noreferrer"
-                  ><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-                    <title>open-in-new</title>
-                    <path
-                      d="M14,3V5H17.59L7.76,14.83L9.17,16.24L19,6.41V10H21V3M19,19H5V5H12V3H5C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V12H19V19Z"
-                    />
-                  </svg>
-                </a>
-              </div>
+              <h3>Smrt transhumanizmu, sloboda narodu!</h3>
+              <a
+                class="project-links"
+                href="https://delfi.rs/knjige/158820-smrt-transhumanizmu-sloboda-narodu-knjiga-delfi-knjizare.html"
+                target="_blank"
+                rel="noopener noreferrer"
+                ><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                  <title>open-in-new</title>
+                  <path
+                    d="M14,3V5H17.59L7.76,14.83L9.17,16.24L19,6.41V10H21V3M19,19H5V5H12V3H5C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V12H19V19Z"
+                  />
+                </svg>
+              </a>
             </div>
             <p>
-              Short description of the project, just a couple of sentences will
-              do.
+              U sljedećih deset godina svijet će se promijeniti kao nikad u
+              znanoj povijesti. Pretjerano je riječ koja je odavno prestala biti
+              pretjerana, pa nije pretjerano reći da će u budućnosti nastati
+              dvije ljudske rase: digitalna i analogna.
             </p>
           </div>
         </div>
@@ -213,15 +266,15 @@
     </main>
     <footer>
       <section class="contact-me">
-        <h2>Contact me</h2>
+        <h2>Kontakt</h2>
         <p>
-          Please get in touch if you think our work could be mutually
-          beneficial.
+          Ćuj, molimo vas da nas kontaktirate ako smatrate da naš rad može biti
+          obostrano koristan.
         </p>
         <address>
           <div class="address-top">
-            <p>1234 Elm Road</p>
-            <p>Random Town, California 12345</p>
+            <p>Cesta Područja 51</p>
+            <p>Zagreb, Hrvatska</p>
           </div>
           <div class="address-bottom">
             <div class="phone">
@@ -231,7 +284,7 @@
                   d="M20,15.5C18.8,15.5 17.5,15.3 16.4,14.9C16.3,14.9 16.2,14.9 16.1,14.9C15.8,14.9 15.6,15 15.4,15.2L13.2,17.4C10.4,15.9 8,13.6 6.6,10.8L8.8,8.6C9.1,8.3 9.2,7.9 9,7.6C8.7,6.5 8.5,5.2 8.5,4C8.5,3.5 8,3 7.5,3H4C3.5,3 3,3.5 3,4C3,13.4 10.6,21 20,21C20.5,21 21,20.5 21,20V16.5C21,16 20.5,15.5 20,15.5M5,5H6.5C6.6,5.9 6.8,6.8 7,7.6L5.8,8.8C5.4,7.6 5.1,6.3 5,5M19,19C17.7,18.9 16.4,18.6 15.2,18.2L16.4,17C17.2,17.2 18.1,17.4 19,17.4V19Z"
                 />
               </svg>
-              <a href="tel:555-555-5555">555-555-5555</a>
+              <a href="tel:666-666-6666">666-666-6666</a>
             </div>
             <div class="email">
               <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
@@ -240,8 +293,8 @@
                   d="M22 6C22 4.9 21.1 4 20 4H4C2.9 4 2 4.9 2 6V18C2 19.1 2.9 20 4 20H20C21.1 20 22 19.1 22 18V6M20 6L12 11L4 6H20M20 18H4V8L12 13L20 8V18Z"
                 />
               </svg>
-              <a href="mailto:ashley.williams.is.not.real@gmail.com"
-                >ashley.williams.is.not.real@gmail.com</a
+              <a href="mailto:kresimir.misak.is.not.real@gmail.com"
+                >kresimir.misak.is.not.real@gmail.com</a
               >
             </div>
           </div>
