--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
           <img
             loading="lazy"
             src="./images/profile-mobile.jpg"
-            alt="Krešimir Mišak"
+            alt="Krešimir Mišak nasmejan."
           />
         </picture>
         <h1>Krešimir Mišak</h1>
@@ -341,11 +341,9 @@
         <img
           loading="lazy"
           src="./images/contact-me-mobile.jpg"
-          alt="Kresimir Misak"
+          alt="Krešimir Mišak sa gitarom u rukama."
         />
       </picture>
     </footer>
   </body>
 </html>
-
-<!-- todo: latinicna slova,  img alt -->
