Add CSS media query styles for header section.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
     <header>
       <div class="profile-card">
         <picture>
-          <source srcset="" media="" />
+          <source
+            srcset="./images/profile-tablet.jpg"
+            media="(min-width: 500px)"
+          />
           <source srcset="" media="" />
           <img
             loading="lazy"
