Add CSS media query tablet styles for footer  section.

--- a/index.html
+++ b/index.html
@@ -198,9 +198,7 @@
             <p>
               Autor spremno uskače u duboko more vlastite (pod)svijesti, pritom
               opremljenu samo iskrenom radoznalošću i željom da se na licu
-              mjesta uvjeri kako živi svijest. Glavni cilj ove knjige je poziv
-              na radikalno preispitivanje svega što znamo o sebi i svijetu u
-              kojem živimo.
+              mjesta uvjeri kako živi svijest.
             </p>
           </div>
         </div>
@@ -296,8 +294,8 @@
                   d="M22 6C22 4.9 21.1 4 20 4H4C2.9 4 2 4.9 2 6V18C2 19.1 2.9 20 4 20H20C21.1 20 22 19.1 22 18V6M20 6L12 11L4 6H20M20 18H4V8L12 13L20 8V18Z"
                 />
               </svg>
-              <a href="mailto:kresimir.misak.is.not.real@gmail.com"
-                >kresimir.misak.is.not.real@gmail.com</a
+              <a href="mailto:kresimir.misak.is.real@gmail.com"
+                >kresimir.misak.is.real@gmail.com</a
               >
             </div>
           </div>
@@ -339,7 +337,10 @@
         </div>
       </section>
       <picture>
-        <source srcset="" media="" />
+        <source
+          srcset="./images/contact-me-tablet.jpg"
+          media="(min-width: 500px)"
+        />
         <source srcset="" media="" />
         <img
           loading="lazy"
