Add desktop media query for header section styles

--- a/index.html
+++ b/index.html
@@ -13,10 +13,9 @@
       <div class="profile-card">
         <picture>
           <source
-            srcset="./images/profile-tablet.jpg"
+            srcset="./images/profile-tablet-and-desktop.jpg"
             media="(min-width: 500px)"
           />
-          <source srcset="" media="" />
           <img
             loading="lazy"
             src="./images/profile-mobile.jpg"
@@ -32,8 +31,8 @@
           istraživačkim radovima. Najpoznatiji je kao autor popularne TV emisije
           "Na rubu znanosti". Osim toga, Mišak je i pisac koji je objavio
           nekoliko knjiga koje istražuju granice konvencionalnog naučnog
-          razumevanja. Takodje, poznat po svom angažmanu u različitim muzičkim
-          žanrovima.
+          razumevanja. Takodje, poznat je po svom angažmanu u različitim
+          muzičkim žanrovima.
         </p>
         <div class="social-links">
           <a
@@ -211,7 +210,6 @@
           <div class="project-info">
             <div class="project-info-top">
               <h3>Sretan vam kraj svijeta... kakvog ste poznavali</h3>
-
               <a
                 class="project-links"
                 href="https://delfi.rs/knjige/178053-sretan-vam-kraj-svijeta-kakvog-ste-poznavali-knjiga-delfi-knjizare.html"
