Add desktop media query for footer section styles

--- a/index.html
+++ b/index.html
@@ -336,10 +336,13 @@
       </section>
       <picture>
         <source
+          srcset="./images/contact-me-desktop.jpg"
+          media="(min-width: 1000px)"
+        />
+        <source
           srcset="./images/contact-me-tablet.jpg"
           media="(min-width: 500px)"
         />
-        <source srcset="" media="" />
         <img
           loading="lazy"
           src="./images/contact-me-mobile.jpg"
