--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Fan stranica posvećena Krešimiru Mišaku, novinaru, piscu i muzičaru poznatom po emisiji 'Na rubu znanosti' i brojnim knjigama o nauci i misterijama."
+    />
     <title>Krešimir Mišak | Fan Page</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="reset.css" />
