Add width and height to lazy loaded images

--- a/index.html
+++ b/index.html
@@ -17,11 +17,15 @@
       <div class="profile-card">
         <picture>
           <source
+            width="500"
+            height="500"
             srcset="./images/profile-tablet-and-desktop.jpg"
             media="(min-width: 500px)"
           />
           <img
             loading="lazy"
+            width="470"
+            height="547"
             src="./images/profile-mobile.jpg"
             alt="Krešimir Mišak nasmejan."
           />
@@ -88,6 +92,8 @@
       <div class="projects">
         <div class="project">
           <img
+            width="480"
+            height="425"
             loading="lazy"
             src="./images/project-nrz.jpg"
             alt="Na rubu znanosti"
@@ -118,6 +124,8 @@
         </div>
         <div class="project">
           <img
+            width="480"
+            height="425"
             loading="lazy"
             src="./images/project-hakuna.jpg"
             alt="Hakuna Matata"
@@ -148,6 +156,8 @@
         </div>
         <div class="project">
           <img
+            width="480"
+            height="425"
             loading="lazy"
             src="./images/project-doba_virusa.jpg"
             alt="Doba virusa i ljudi"
@@ -178,6 +188,8 @@
         </div>
         <div class="project">
           <img
+            width="480"
+            height="425"
             loading="lazy"
             src="./images/project-duhovni_ratnik.jpg"
             alt="Duhovni ratnik i beskrajni kozmički orgazam"
@@ -207,6 +219,8 @@
         </div>
         <div class="project">
           <img
+            width="480"
+            height="425"
             loading="lazy"
             src="./images/project-sretan_vam_kraj.jpg"
             alt="Sretan vam kraj svijeta... kakvog ste poznavali"
@@ -237,6 +251,8 @@
         </div>
         <div class="project">
           <img
+            width="480"
+            height="425"
             loading="lazy"
             src="./images/project-smrt_transhumanizmu.jpg"
             alt="Smrt transhumanizmu, sloboda narodu!"
@@ -340,14 +356,20 @@
       </section>
       <picture>
         <source
+          width="926"
+          height="800"
           srcset="./images/contact-me-desktop.jpg"
           media="(min-width: 1000px)"
         />
         <source
+          width="510"
+          height="801"
           srcset="./images/contact-me-tablet.jpg"
           media="(min-width: 500px)"
         />
         <img
+          width="500"
+          height="789"
           loading="lazy"
           src="./images/contact-me-mobile.jpg"
           alt="Krešimir Mišak sa gitarom u rukama."
