Remove lazy loading of images that appear above the fold

--- a/index.html
+++ b/index.html
@@ -17,15 +17,10 @@
       <div class="profile-card">
         <picture>
           <source
-            width="500"
-            height="500"
             srcset="./images/profile-tablet-and-desktop.jpg"
             media="(min-width: 500px)"
           />
           <img
-            loading="lazy"
-            width="470"
-            height="547"
             src="./images/profile-mobile.jpg"
             alt="Krešimir Mišak nasmejan."
           />
@@ -91,13 +86,7 @@
       <h2>Projekti</h2>
       <div class="projects">
         <div class="project">
-          <img
-            width="480"
-            height="425"
-            loading="lazy"
-            src="./images/project-nrz.jpg"
-            alt="Na rubu znanosti"
-          />
+          <img src="./images/project-nrz.jpg" alt="Na rubu znanosti" />
           <div class="project-info">
             <div class="project-info-top">
               <h3>Na rubu znanosti</h3>
@@ -123,13 +112,7 @@
           </div>
         </div>
         <div class="project">
-          <img
-            width="480"
-            height="425"
-            loading="lazy"
-            src="./images/project-hakuna.jpg"
-            alt="Hakuna Matata"
-          />
+          <img src="./images/project-hakuna.jpg" alt="Hakuna Matata" />
           <div class="project-info">
             <div class="project-info-top">
               <h3>Hakuna Matata</h3>
@@ -156,9 +139,6 @@
         </div>
         <div class="project">
           <img
-            width="480"
-            height="425"
-            loading="lazy"
             src="./images/project-doba_virusa.jpg"
             alt="Doba virusa i ljudi"
           />
