Define the intrinsic dimensions of the images, adjust CSS height of the images.

--- a/index.html
+++ b/index.html
@@ -17,10 +17,14 @@
       <div class="profile-card">
         <picture>
           <source
+            width="500"
+            height="500"
             srcset="./images/profile-tablet-and-desktop.jpg"
             media="(min-width: 500px)"
           />
           <img
+            width="470"
+            height="547"
             src="./images/profile-mobile.jpg"
             alt="Krešimir Mišak nasmejan."
           />
@@ -86,7 +90,12 @@
       <h2>Projekti</h2>
       <div class="projects">
         <div class="project">
-          <img src="./images/project-nrz.jpg" alt="Na rubu znanosti" />
+          <img
+            width="480"
+            height="425"
+            src="./images/project-nrz.jpg"
+            alt="Na rubu znanosti"
+          />
           <div class="project-info">
             <div class="project-info-top">
               <h3>Na rubu znanosti</h3>
@@ -112,7 +121,12 @@
           </div>
         </div>
         <div class="project">
-          <img src="./images/project-hakuna.jpg" alt="Hakuna Matata" />
+          <img
+            width="480"
+            height="425"
+            src="./images/project-hakuna.jpg"
+            alt="Hakuna Matata"
+          />
           <div class="project-info">
             <div class="project-info-top">
               <h3>Hakuna Matata</h3>
@@ -139,6 +153,8 @@
         </div>
         <div class="project">
           <img
+            width="480"
+            height="425"
             src="./images/project-doba_virusa.jpg"
             alt="Doba virusa i ljudi"
           />
