--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <header>
-      <div class="profile-card">
+      <section class="profile-card">
         <picture>
           <source
             width="500"
@@ -30,7 +30,7 @@
           />
         </picture>
         <h1>Krešimir Mišak</h1>
-      </div>
+      </section>
       <section class="about-me">
         <h2>O meni</h2>
         <p>
@@ -88,7 +88,7 @@
     </header>
     <main>
       <h2>Projekti</h2>
-      <div class="projects">
+      <section class="projects">
         <div class="project">
           <img
             width="480"
@@ -277,7 +277,7 @@
             </p>
           </div>
         </div>
-      </div>
+      </section>
     </main>
     <footer>
       <section class="contact-me">
