Change the favicon format

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>Krešimir Mišak | Fan Page</title>
     <link rel="stylesheet" href="reset.css" />
     <link rel="stylesheet" href="style.css" />
-    <link rel="icon" href="./images/icon.jpeg" />
+    <link rel="icon" href="./images/icon.ico" />
   </head>
   <body>
     <header>
