--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
       name="description"
       content="Fan stranica posvećena Krešimiru Mišaku, novinaru, piscu i muzičaru poznatom po emisiji 'Na rubu znanosti' i brojnim knjigama o nauci i misterijama."
     />
+    <meta property="og:title" content="Krešimir Mišak | Fan stranica" />
+    <meta
+      property="og:description"
+      content="Istražite rad i projekte Krešimira Mišaka: novinara, pisca i glazbenika."
+    />
+    <meta property="og:image" content="./images/profile-mobile.jpg" />
+    <meta property="og:url" content="https://example.com" />
+    <meta property="og:type" content="website" />
     <title>Krešimir Mišak | Fan Page</title>
     <link rel="stylesheet" href="reset.css" />
     <link rel="stylesheet" href="style.css" />
