Wrap project images and descriptions inside figure tag

--- a/index.html
+++ b/index.html
@@ -97,14 +97,14 @@
     <main>
       <h2>Projekti</h2>
       <section class="projects">
-        <div class="project">
+        <figure class="project">
           <img
             width="480"
             height="425"
             src="./images/project-nrz.jpg"
             alt="Na rubu znanosti"
           />
-          <div class="project-info">
+          <figcaption class="project-info">
             <div class="project-info-top">
               <h3>Na rubu znanosti</h3>
               <a
@@ -126,16 +126,16 @@
               događajima. Emisija potiče rasprave o neistraženim i kontroverznim
               pitanjima.
             </p>
-          </div>
-        </div>
-        <div class="project">
+          </figcaption>
+        </figure>
+        <figure class="project">
           <img
             width="480"
             height="425"
             src="./images/project-hakuna.jpg"
             alt="Hakuna Matata"
           />
-          <div class="project-info">
+          <figcaption class="project-info">
             <div class="project-info-top">
               <h3>Hakuna Matata</h3>
               <div class="project-links">
@@ -157,16 +157,16 @@
               Danas ga čini trojka Krešimir Mišak (gitara, vokal) - Danko
               Stefanović (bas) - Goran Markić (bubnjevi).
             </p>
-          </div>
-        </div>
-        <div class="project">
+          </figcaption>
+        </figure>
+        <figure class="project">
           <img
             width="480"
             height="425"
             src="./images/project-doba_virusa.jpg"
             alt="Doba virusa i ljudi"
           />
-          <div class="project-info">
+          <figcaption class="project-info">
             <div class="project-info-top">
               <h3>Doba virusa i ljudi</h3>
               <a
@@ -188,9 +188,9 @@
               promijenjeni. A sve je to tek scena otvaranja novog čina predstave
               koja traje znatno duže od tek nekoliko godina ili desetljeća.
             </p>
-          </div>
-        </div>
-        <div class="project">
+          </figcaption>
+        </figure>
+        <figure class="project">
           <img
             width="480"
             height="425"
@@ -198,7 +198,7 @@
             src="./images/project-duhovni_ratnik.jpg"
             alt="Duhovni ratnik i beskrajni kozmički orgazam"
           />
-          <div class="project-info">
+          <figcaption class="project-info">
             <div class="project-info-top">
               <h3>Duhovni ratnik i beskrajni kozmički orgazam</h3>
               <a
@@ -219,9 +219,9 @@
               opremljenu samo iskrenom radoznalošću i željom da se na licu
               mjesta uvjeri kako živi svijest.
             </p>
-          </div>
-        </div>
-        <div class="project">
+          </figcaption>
+        </figure>
+        <figure class="project">
           <img
             width="480"
             height="425"
@@ -229,7 +229,7 @@
             src="./images/project-sretan_vam_kraj.jpg"
             alt="Sretan vam kraj svijeta... kakvog ste poznavali"
           />
-          <div class="project-info">
+          <figcaption class="project-info">
             <div class="project-info-top">
               <h3>Sretan vam kraj svijeta... kakvog ste poznavali</h3>
               <a
@@ -251,9 +251,9 @@
               četrdesetak najpoznatijih svetskih autora iz područja popularne
               nauke i duhovnosti.
             </p>
-          </div>
-        </div>
-        <div class="project">
+          </figcaption>
+        </figure>
+        <figure class="project">
           <img
             width="480"
             height="425"
@@ -261,7 +261,7 @@
             src="./images/project-smrt_transhumanizmu.jpg"
             alt="Smrt transhumanizmu, sloboda narodu!"
           />
-          <div class="project-info">
+          <figcaption class="project-info">
             <div class="project-info-top">
               <h3>Smrt transhumanizmu, sloboda narodu!</h3>
               <a
@@ -283,8 +283,8 @@
               pretjerana, pa nije pretjerano reći da će u budućnosti nastati
               dvije ljudske rase: digitalna i analogna.
             </p>
-          </div>
-        </div>
+          </figcaption>
+        </figure>
       </section>
     </main>
     <footer>
