--- a/index.html
+++ b/index.html
@@ -144,19 +144,18 @@
           <figcaption class="project-info">
             <div class="project-info-top">
               <h3>Hakuna Matata</h3>
-              <div class="project-links">
-                <a
-                  href="https://hakunamatataband.com/"
-                  target="_blank"
-                  rel="noopener noreferrer"
-                  ><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-                    <title>open-in-new</title>
-                    <path
-                      d="M14,3V5H17.59L7.76,14.83L9.17,16.24L19,6.41V10H21V3M19,19H5V5H12V3H5C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V12H19V19Z"
-                    />
-                  </svg>
-                </a>
-              </div>
+              <a
+                class="project-links"
+                href="https://hakunamatataband.com/"
+                target="_blank"
+                rel="noopener noreferrer"
+                ><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                  <title>open-in-new</title>
+                  <path
+                    d="M14,3V5H17.59L7.76,14.83L9.17,16.24L19,6.41V10H21V3M19,19H5V5H12V3H5C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V12H19V19Z"
+                  />
+                </svg>
+              </a>
             </div>
             <p>
               HAKUNA MATATA je zagrebački rock-sastav nastao oko 2000. godine.
